<resources>
    <string name="app_name">TestDemo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_title">FloatingGroupExpandableListView</string>
    <string name="android_versions_title">Android Versions</string>
    <string name="android_versions_description">Starting from Cupcake (API LEVEL 3)</string>

    <!-- 抽屉组 -->
    <string name="life_circle">生命周期</string>
    <string name="floating_group">FloatingGroupExpandableListView</string>
    <string name="async_task">AsyncTask</string>
    <string name="gson">GSON</string>
    <string name="simple_adapter">SimpleAdapter</string>
    <string name="file_provider">File Provider</string>
    <string name="aidl">AIDL</string>
    <string name="nfc">NFC</string>
    <string name="task_affinity">TaskAffinity</string>
    <string name="launch_mode">LaunchMode</string>



    <string name="fileprovider_authority">com.liuranchao.testdemo.fileprovider</string>
</resources>
