<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_life_circle"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/life_circle"/>

        <item
            android:id="@+id/nav_floating_group_expandable_list_view"
            android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/floating_group"/>
        
        <item
            android:id="@+id/nav_async_task"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/async_task"/>

        <item
            android:id="@+id/nav_gson"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/gson"/>

        <item
            android:id="@+id/nav_simple_adapter"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/simple_adapter"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="Share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_send"
                android:title="Send"/>
        </menu>
    </item>

</menu>